# qwt-timeline

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main_window.cpp  main_window.h
.github/: copilot-instructions.md
.github/skills/build-run/: SKILL.md
examples/: CMakeLists.txt  main_window.cpp
prompts/: implementTimelineFeatures.prompt.md  prompt1.md  prompt2.md  prompt3.md  prompt4.md
timeline/: CMakeLists.txt  qopenglwidget.h  theme.h  timeline_event.h  timeline_node.cpp  timeline_node.h  timeline_node_model.cpp  timeline_node_model.h  timeline_view.cpp  timeline_view.h  timeline_widget.cpp  timeline_widget.h
